<resources>
    <string name="app_name">Rubik Doctor</string>




    <string name="some_thing_went_wrong_error_msg">Something went wrong, Please try again</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile</string>
    <string name="or_login">OR \n Login with</string>
    <string name="or">OR</string>
    <string name="forget_Password"><u>Forgot Password ?</u></string>
    <string name="create_account">Create Account!</string>
    <string name="agree_terms">By signing up you agree to Rubik Care terms and conditions</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="uer_name">Uer Name</string>
    <string name="logout">Log out</string>
    <string name="are_you_sure_you_want_log_out">Are you sure you want log out?</string>
    <string name="cancel">Cancel</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="email_are_required">email are required</string>
    <string name="password_are_required">password are required</string>
    <string name="not_member">Not a member?</string>
    <string name="signUP"><u>Sign up</u></string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="full_name_are_required">full name are required</string>
    <string name="mobile_are_required">mobile are required</string>
    <string name="phone_number_digits_should_be_from_10_to_11_numbers">Phone number digits should 11 numbers</string>
    <string name="birth_date_are_required">birth date are required</string>
    <string name="gender_are_required">gender are required</string>
    <string name="password_should_be_more_than_8_char">password should be more than 8 char</string>
    <string name="password_should_contains_number_and_at_least_1_char">password should contains number and at least 1 char</string>
    <string name="confirm_Password_are_required">confirm Password are required</string>
    <string name="passwords_not_match">passwords not match</string>
    <string name="please_select_an_profile_image">please select an profile image</string>
    <string name="full_name_ed">Full Name</string>
    <string name="mobile_number_ed">Mobile Number</string>
    <string name="birth_date_ed">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="already_member">Already member?</string>
    <string name="signIn"><u>Sign In</u></string>
    <string name="forgot_password">Forgot Password ??</string>
    <string name="enter_your_email_to_get_a_password_reset_link">Enter your email to get a password reset link</string>
    <string name="mobile_or_email">Mobile Or Email</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset password</string>
    <string name="verification">Verification</string>
    <string name="enter_verification_code_to_continue">Enter verification code to continue</string>
    <string name="resend_code">Resend code</string>
    <string name="upload_your_picture">Upload Your Picture</string>
    <string name="new_password_ed">New Password</string>
    <string name="current_password_ed">Current Password</string>

    <string name="change_app_language">Change app language</string>
    <string name="you_should_agree_to_our_terms">you should agree to our terms</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_sure">YES, SURE</string>
    <string name="no_cancel">NO, CANCEL</string>
    <string name="language">language</string>
    <string name="save">Save</string>
    <string name="enter_valid_email_format">enter valid email format</string>

    <string name="input_required">Input Required</string>
    <string name="enter_something">Enter something</string>
    <string name="please_login">Please Login</string>

    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_clinics">My Clinics</string>
    <string name="patients">Patients</string>
    <string name="clinic_finance">Clinic Finance</string>
    <string name="appointments">Appointments</string>
    <string name="payment_status">Payment Status :</string>
    <string name="date_time"><![CDATA[Date & Time :]]></string>
    <string name="no_appointment_found">No Appointment Founded !</string>
    <string name="try_again">Try Again</string>
    <string name="error_text_label">Connection Error</string>
    <string name="no_show">No Show</string>
    <string name="on_service">On Service</string>
    <string name="done">Done</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="patient_information">Patient Information</string>
    <string name="name_">Name :</string>
    <string name="id_">Id :</string>
    <string name="birthdate_">Birthdate :</string>
    <string name="height_">Height :</string>
    <string name="weight_">Weight :</string>
    <string name="appointment_information">Appointment Information</string>
    <string name="services_type_">Services Type :</string>
    <string name="status_">Status :</string>
    <string name="date_">Date :</string>
    <string name="duration_">Duration :</string>
    <string name="amount_">Fees :</string>
    <string name="payment_status_">Payment Status :</string>
    <string name="payment_method_">Payment method :</string>
    <string name="extra_phone_number_">Extra Phone Number :</string>
    <string name="patient_problem">Patient complaint</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="minutes">minutes</string>
    <string name="egp">EGP</string>
    <string name="paid">Paid</string>
    <string name="unpaid">unPaid</string>
    <string name="filter">Filter</string>
    <string name="choose_status">Choose Status</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="on_services">On Services</string>
    <string name="cancelled">Cancelled</string>
    <string name="data_range">Data Range</string>
    <string name="apply">Apply</string>
    <string name="check_user_and_password">Incorrect username or password</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="yes">yes</string>
    <string name="are_you_sure_change_status">Are you sure you want to change the status ?</string>
    <string name="phone_number_">Phone Number :</string>
    <string name="reset">Reset</string>
    <string name="search_">Search…</string>
    <string name="make_appointments">Make Appointments</string>
    <string name="service_type">Services Type</string>
    <string name="patient_name">Patient Name</string>
    <string name="amount">Fees</string>
    <string name="payment_method">Payment Method</string>
    <string name="date_of_appointment">Date Of Appointment</string>
    <string name="time_off_appointment">Time off appointment</string>
    <string name="booked">Booked</string>
    <string name="no_match_found">No Match founded !</string>
    <string name="number_of_cases">Number Of Cases :</string>
    <string name="number_of_reservations">Number Of Reservations :</string>
    <string name="available_remaining_cases">Available Remaining Cases :</string>
    <string name="book">Book</string>
    <string name="appointment_has_been_scheduled_successfully">Appointment has been scheduled successfully!</string>
    <string name="consultation_service_are_required">Consultation service are required</string>
    <string name="patient_name_are_required">Patient name is required</string>
    <string name="payment_method_are_required">Payment method is required</string>
    <string name="appointment_date_are_required">Appointment date is required</string>
    <string name="select_appointment_time_first">select appointment time first</string>
    <string name="no_available_appointments_at_this_day">No available appointments at this day</string>
    <string name="select_consultation_service_first">Select consultation service first</string>
    <string name="you_should_complete_clinic_setting_first">Before adding an appointment, please complete the clinic setup on web through your computer</string>
    <string name="insurance_">Insurance :</string>
    <string name="first_appointment_">First Appointment :</string>
    <string name="last_appointment_">Last Appointment :</string>
    <string name="ok">Ok</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number_">Mobile Number</string>
    <string name="insurance">Insurance</string>
    <string name="patient_name_is_required">Patient name is required</string>
    <string name="gender_is_required">gender is required</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="basic_information">Basic Information</string>



    <string name="no_data_found">No Data Founded !</string>



    <string name="user_photo">User Photo</string>
    <string name="name">Name :</string>
    <string name="email_">Email :</string>
    <string name="mobile_">Mobile :</string>
    <string name="birthdate">Birthdate :</string>
    <string name="gender_">Gender :</string>
    <string name="change_your_photo"><u>Change your photo</u></string>
    <string name="no_booking_found_in_this_date">No booking founded in this date</string>
    <string name="income_type_">Income Type :</string>
    <string name="income_name_">Income Name :</string>
    <string name="clinic_income">Clinic Income</string>
    <string name="clinic_expenses">Clinic Expenses</string>
    <string name="expenses_type_">Expenses Type :</string>
    <string name="income_type">Income type</string>
    <string name="expense_type">Expense type</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="expense_type_is_required">Expense type is required</string>
    <string name="date_is_required">Date is required</string>
    <string name="time_is_required">Time is required</string>
    <string name="fees_is_required">Fees is required</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="delete_expense">Are you sure you want to delete this expense ?</string>
    <string name="note_">Note :</string>
    <string name="no_patients_founded_">No patients founded !</string>

    <string name="mark_all_as_read">Mark all as read</string>
    <string name="notifications">Notifications</string>



</resources>