<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <rubikans.rubik.doctor.custom_views.CustomTopBar
            android:id="@+id/customBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvCase"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/txt_black_color"
            android:text="@string/change_your_password"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customBar" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCase">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintVertical_bias="0.0">

                <rubikans.rubik.doctor.custom_views.RubikEditText
                    android:id="@+id/currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:txtInputType="textPassword"
                    app:passwordToggleEnabled="true"
                    app:hint_ed="@string/current_password_ed">

                </rubikans.rubik.doctor.custom_views.RubikEditText>

                <rubikans.rubik.doctor.custom_views.RubikEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:txtInputType="textPassword"
                    app:hint_ed="@string/new_password_ed">

                </rubikans.rubik.doctor.custom_views.RubikEditText>


                <rubikans.rubik.doctor.custom_views.RubikEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:txtInputType="textPassword"
                    app:hint_ed="@string/confirm_password">

                </rubikans.rubik.doctor.custom_views.RubikEditText>

                <Button
                    android:id="@+id/saveNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_corner_phr"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:shape="rectangle"
                    android:text="@string/save"
                    android:textColor="#FFFFFF" />


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>