<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <rubikans.rubik.doctor.custom_views.CustomTopBar
            android:id="@+id/customBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvCase"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/rTxtDarkColor"
            android:text="@string/basic_information"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customBar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCase" />

        <TextView
            android:id="@+id/editImageTxt"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/rBlueColor"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/change_your_photo"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image"
            />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editImageTxt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintVertical_bias="0.0">

                <rubikans.rubik.doctor.custom_views.RubikEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint_ed="@string/full_name_ed">

                </rubikans.rubik.doctor.custom_views.RubikEditText>



                <rubikans.rubik.doctor.custom_views.RubikDropdownMenu
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint_ed="@string/gender">

                </rubikans.rubik.doctor.custom_views.RubikDropdownMenu>

                <rubikans.rubik.doctor.custom_views.RubikEditText
                    android:id="@+id/birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint_ed="@string/birth_date_ed">

                </rubikans.rubik.doctor.custom_views.RubikEditText>




            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>